# parallel-aco-for-tsp

./: .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.yml  AVERAGE_TESTING_COMPLETION_REPORT.md  BENCHMARK_REPORT.md  CMakeLists.txt  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_EN.md  DEVELOPMENT_REPORT.md  Dockerfile  ENHANCED_AVERAGE_TESTING.md  EXPERIMENT_QUICK_START.md  EXPERIMENT_WORKAROUND.md  FINAL_COMPLETION_REPORT.md  FOUR_INSTANCE_SUMMARY.md  QUICK_GUIDE.md  README.md  README_EN.md  TSP_FIX_VALIDATION_REPORT.md  analyze_four_instances.py  ant_thread_scalability_report.md  ant_thread_scalability_results.csv  build.bat  build.sh  comprehensive_benchmark.cpp  comprehensive_experiment_runner.cpp  create_missing_opt_tours.py  create_optimal_tours.py  debug_aco.cpp  debug_aco_params.cpp  debug_ant_choices.cpp  debug_ant_flow.cpp  debug_pheromone.cpp  debug_prob_calc.cpp  debug_tour_length.cpp  distance_calculator_implementation.cpp  distance_calculator_tests.cpp  download_gr202.py  download_key_opt_tours.py  download_large_instances.py  (+42 more)
data/: a280.tsp  berlin52.opt.tour  ch130.tsp  eil51.opt.tour  eil76.opt.tour  eil76.tsp  gr202.tsp  kroA100.tsp  kroA150.opt.tour  kroA150.tsp  kroA200.opt.tour  kroA200.tsp  pcb442.tsp  pr226.tsp  st70.tsp  tsplib_optimal_solutions.txt
experiment/: OVERVIEW.md  README.md  README_Python.md  USER_GUIDE.md  analyze_results.py  ant_thread_scalability_experiment.cpp  build_experiment.bat  build_experiment.sh  clean_parallel_experiment.cpp  comprehensive_aco_experiment.cpp  comprehensive_ant_thread_experiment.cpp  comprehensive_experiment.cpp  english_fast_aco_experiment.cpp  experiment_config_detailed.json  fast_ant_thread_experiment.cpp  four_instances_experiment_config.json  four_instances_experiment_runner.cpp  optimized_aco_experiment.cpp  parallel_aco_experiment.py  parallel_diagnostic.cpp  python_experiment_config.json  quick_aco_experiment.cpp  run_experiment.bat  run_experiment.sh  run_python_experiment.bat  run_python_experiment.sh  simple_parallel_experiment.cpp  speedup_analysis.py  summary_analysis.py
experiment/experiment/results/experiment_20250819_000757/analysis/: detailed_statistics.csv  experiment_summary.txt
experiment/experiment/results/experiment_20250819_000757/baseline_measurements/: baseline_times_20250819_000757.csv
experiment/experiment/results/experiment_20250819_000757/fixed_iterations/: fixed_iterations_20250819_000757.csv
experiment/experiment/results/experiment_20250819_000757/time_budget/: time_budget_20250819_000757.csv
experiment/experiment/results/experiment_20250819_001418/analysis/: detailed_statistics.csv  experiment_summary.txt
experiment/experiment/results/experiment_20250819_001418/baseline_measurements/: baseline_times_20250819_001418.csv
experiment/experiment/results/experiment_20250819_001418/fixed_iterations/: fixed_iterations_20250819_001418.csv
experiment/experiment/results/experiment_20250819_001418/time_budget/: time_budget_20250819_001418.csv
experiment/results/: quick_experiment_results_20250819_012533.csv  statistical_analysis_report.md
include/aco/: AcoEngine.hpp  Ant.hpp  BenchmarkAnalyzer.hpp  DistanceCalculator.hpp  ExperimentRunner.hpp  Graph.hpp  PerformanceMonitor.hpp  PheromoneModel.hpp  StrategyComparator.hpp  SyntheticTSPGenerator.hpp  TSPLibReader.hpp  ThreadLocalPheromoneModel.hpp  Tour.hpp
src/: main.cpp
src/aco/: AcoEngine.cpp  Ant.cpp  BenchmarkAnalyzer.cpp  DistanceCalculator.cpp  ExperimentRunner.cpp  Graph.cpp  PerformanceMonitor.cpp  PheromoneModel.cpp  StrategyComparator.cpp  SyntheticTSPGenerator.cpp  TSPLibReader.cpp  ThreadLocalPheromoneModel.cpp  Tour.cpp
tests/: bdd_main.cpp
tests/features/: 01_walking_skeleton.feature  02_construct_tour.feature  03_probabilistic_choice.feature  04_evaporation.feature  05_delta_accumulation.feature  06_delta_merge.feature  07_parallel_consistency.feature  08_convergence.feature  09_performance_budget.feature  10_numa_awareness.feature  11_reproducibility.feature
tests/steps/: construct_tour_steps.cpp  probabilistic_choice_steps.cpp  walking_skeleton_steps.cpp
tests/unit/: test_ant.cpp  test_bdd_scenarios.cpp  test_engine.cpp  test_graph.cpp  test_optimal_path_validation.cpp  test_pheromone.cpp  test_tdd_integration.cpp  test_thread_local_pheromone.cpp  test_tour.cpp
